fix: cropper js for /u/setting

--- a/src/public/css/main.less
+++ b/src/public/css/main.less
@@ -2,8 +2,6 @@
   padding: 0;
   margin: 0;
   font-family: S;
-  direction: rtl;
-  transition: .2s ease;
 }
 
 a {
@@ -11,5 +9,6 @@ a {
 }
 
 body {
+  direction: rtl;
   background-color: #F5F5F5;
 }
